<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sonder</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_feed">Sonder Feed</string>
    <string name="email_prompt">Email</string>
    <string name="password_prompt">Password</string>
    <string name="log_in">Log In</string>
    <string name="register_here">Don\'t have an account? Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_email_prompt">Re-enter Email</string>
    <string name="register_button">Sign Up</string>
    <string name="male_prompt">Male</string>
    <string name="female_prompt">Female</string>
    <string name="birthday_prompt">Birthday</string>
    <string name="date_format">MM/DD/YYYY</string>

    <string-array name="sliding_drawer_items">
        <item>Profile</item>
        <item>People Feed</item>
        <item>Anonymous Feed</item>
        <item>Messages</item>
        <item>Settings</item>
    </string-array>

    <string name="title_activity_profile">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="username_text_view">User Name</string>
    <string name="addfriend_checkBox">Friends?</string>
    <string name="user_profile_image">Profile Picture</string>
    <string name="bio_textview">About</string>
    <string name="profilePosts_button">Sonders</string>
    <string name="profileFriends_button">Friends</string>
    <string name="message_button">Send</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_friends_list">FriendsList</string>
    <string name="friends_list_textview">Friends List </string>
    <string name="make_post">Post your thoughts </string>
    <string name="my_profile">Profile</string>
    <string name="my_messages">messages</string>
    <string name="Profile_school">School</string>
    <string name="Profile_age">Age</string>
    <string name="editProfile">Edit Profile</string>
    <string name="to_full_profile">Full Profile</string>
    <string name= "editbio">Edit Bio</string>
    <string name= "SaveChanges">Save</string>
    <string name = "Refresh">Refresh</string>
    

</resources>
