<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Profile" >

    <TextView
        android:id="@+id/ProfileSchool"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ProfileActivityUsername"
        android:layout_marginTop="37dp"
        android:layout_toRightOf="@+id/ProfileActivityPhoto"
        android:text="@string/Profile_school" />

    <TextView
        android:id="@+id/ProfileActivityUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/ProfileActivityPhoto"
        android:layout_toRightOf="@id/ProfileActivityPhoto"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/username_text_view"
        android:textSize="20sp" />

    <ImageButton
        android:id="@id/ProfileActivityPhoto"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="150dip"
        android:layout_height="120dip"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/user_profile_image"
        android:gravity="center_vertical"
        android:scaleType="fitCenter"
        android:src="@drawable/blank_person"
        android:visibility="visible" />

    <TextView
        android:id="@+id/ProfileBio"
        android:layout_width="wrap_content"
        android:layout_height="60dip"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/ProfileActivityPhoto"
        android:text="@string/bio_textview"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/makePostText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/post"
        android:layout_below="@id/post"
        android:ems="50"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/sendMessage"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/makePostText"
        android:layout_toRightOf="@id/friendCheckBox"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:text="@string/message_button" />

    <TextView
        android:id="@id/post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/ProfileBio"
        android:layout_below="@id/ProfileBio"
        android:layout_marginTop="14dp"
        android:text="@string/make_post" />

    <TextView
        android:id="@+id/ProfileAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ProfileSchool"
        android:layout_alignBottom="@+id/ProfileSchool"
        android:layout_alignRight="@+id/ProfileActivityUsername"
        android:text="@string/Profile_age" />

    <Button
        android:id="@+id/editProfileButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/editProfile" />

</RelativeLayout>