<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|left"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background = "@drawable/login_gradient"
    tools:context=".Profile" >

    <TextView
        android:id="@+id/ProfileAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ProfileSchool"
        android:layout_below="@+id/ProfileSchool"
        android:layout_marginTop="20dp"
        android:text="@string/Profile_age" 
        android:textSize="20sp"/>

    <ImageButton
        android:id="@+id/ProfileActivityPhoto"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="180dip"
        android:layout_height="150dip"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/user_profile_image"
        android:gravity="top|left"
        android:scaleType="fitCenter"
        android:src="@drawable/blank_person"
        android:visibility="visible" />

    <TextView
        android:id="@+id/ProfileBio"
        android:layout_width="wrap_content"
        android:layout_height="60dip"
        android:layout_alignLeft="@id/ProfileActivityPhoto"
        android:layout_alignRight="@+id/ProfileActivityUsername"
        android:layout_below="@id/ProfileActivityPhoto"
        android:layout_marginTop="40dp"
        android:text="@string/bio_textview"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/ProfileSchool"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ProfileActivityUsername"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@id/ProfileActivityPhoto"
        android:text="@string/Profile_school"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/ProfileActivityUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ProfileActivityPhoto"
        android:layout_toRightOf="@+id/ProfileActivityPhoto"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/username_text_view"
        android:textSize="20sp" />

</RelativeLayout>
