<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- Header Section -->

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:orientation="vertical" >
        </RelativeLayout>

        <!-- Footer Section -->

        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:orientation="vertical" >
        </LinearLayout>
        <!-- Body section -->

        <LinearLayout
            android:id="@+id/Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/Names"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:measureWithLargestChild="false"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/firstNameField"
                    android:layout_width="127dp"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="34dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="5dp"
                    android:ems="10"
                    android:hint="@string/first_name"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/lastNameField"
                    android:layout_width="127dp"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="34dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="25dp"
                    android:ems="10"
                    android:hint="@string/last_name"
                    android:inputType="text" />
            </LinearLayout>

            <!-- Email Field -->

            <EditText
                android:id="@+id/emailField"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="34dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:ems="10"
                android:hint="@string/email_prompt"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/confirmEmailField"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="34dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:ems="10"
                android:hint="@string/confirm_email_prompt"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/passwordField"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="34dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:ems="10"
                android:hint="@string/password_prompt"
                android:inputType="textPassword" >
            </EditText>

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="34dp"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="10dp"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/male_prompt" />

                <RadioButton
                    android:id="@+id/radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="50dp"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/female_prompt" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/dates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="34dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/birthday_prompt"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/birth_date"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="25dp"
                    android:hint="@string/date_format"
                    android:inputType="date" />
            </LinearLayout>

            <!-- Register Button -->

            <Button
                android:id="@+id/signInButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:text="@string/register_button" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>