<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <!-- Header Section -->
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        
        android:orientation="vertical"
         >
         
        
        
    </RelativeLayout>
    
    <!-- Footer Section -->
     <LinearLayout
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        
        android:orientation="vertical"
        android:layout_alignParentBottom="true" >
    </LinearLayout>
    <!-- Body section -->

    <LinearLayout
        android:id="@+id/Body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/header"
        >

        <!-- Email Field -->
        <EditText
            android:id="@+id/emailField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="34dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:ems="10"
            android:hint="@string/email_prompt"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="34dp"
            android:ems="10"
            android:hint="@string/password_prompt"
            android:inputType="textPassword" >

            
        </EditText>
		
        <!-- Sign in Button -->
        <Button
            android:id="@+id/signInButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/log_in" />
        
        <!-- Register Button -->
        <Button
            android:id="@+id/registerButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="50dp"
            android:ems="6"
            android:text="@string/register_here" />

    </LinearLayout>

</RelativeLayout>
