<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:id="@+id/RelativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
            android:background="@drawable/login_gradient" >

        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/Names"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:measureWithLargestChild="false"
                android:orientation="horizontal" >
                               
              

                <EditText
                    android:id="@+id/firstNameField"
                    android:layout_width="127dp"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="34dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="5dp"
                    android:ems="10"
                    android:hint="@string/first_name"
                    android:inputType="text" >

                    <requestFocus />
                </EditText>

                <EditText
                    android:id="@+id/lastNameField"
                    android:layout_width="127dp"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="34dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="25dp"
                    android:ems="10"
                    android:hint="@string/last_name"
                    android:inputType="text" />
               
            </LinearLayout>
                
            <EditText           
                android:id="@+id/editSchool"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="80dp"
                android:ems="10"
                android:hint="@string/Profile_school" />

            <LinearLayout
                android:id="@+id/dates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="34dp"
                android:orientation="horizontal" >

            </LinearLayout>

            <EditText
                android:id="@+id/bioEdit"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_marginLeft="25dp"  
                android:layout_marginRight="25dp"                    
                android:layout_weight="0.23"
                android:hint="@string/bio_textview"               
                android:ems="10"
                android:inputType="textMultiLine"
                 />

            <Button
                android:id="@+id/Save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
				style="?android:attr/borderlessButtonStyle"             
                android:layout_marginLeft="235dp"
                android:text="@string/SaveChanges" />

        </LinearLayout>

    </RelativeLayout>

